Ensure the 'save' directory exists on game creation
Fixes a crash when it does not exist.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ add_library(
   src/faction.cpp
   src/faction.hpp
   src/field.cpp
+  src/file_utils.cpp
+  src/file_utils.hpp
   src/game.cpp
   src/game.hpp
   src/help.cpp
